tokio-postgres/tests/derive/fail/borrowed_query_as.stderr
error: implementation of `FromRow` is not general enough
 --> tests/derive/fail/borrowed_query_as.rs:9:5
  |
9 |     client.query_one_as::<User<'_>>("SELECT name FROM users", &[]).await
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FromRow` is not general enough
  |
  = note: `FromRow<'0>` would have to be implemented for the type `User<'_>`, for any lifetime `'0`...
  = note: ...but `FromRow<'1>` is actually implemented for the type `User<'1>`, for some specific lifetime `'1`

error: implementation of `FromRow` is not general enough
 --> tests/derive/fail/borrowed_query_as.rs:9:68
  |
9 |     client.query_one_as::<User<'_>>("SELECT name FROM users", &[]).await
  |                                                                    ^^^^^ implementation of `FromRow` is not general enough
  |
  = note: `FromRow<'0>` would have to be implemented for the type `User<'_>`, for any lifetime `'0`...
  = note: ...but `FromRow<'1>` is actually implemented for the type `User<'1>`, for some specific lifetime `'1`
